tmp-dev-full/objects/MigrationAdjustmentLog__c/MigrationAdjustmentLog__c.object-meta.xml
<CustomObject>
    <description>옵션 C 마이그레이션 분기 처리 시 발생한 강제 차감/환원/손실 이력 기록. 운영자 모니터링 + 정기 정산 + 회원 보상 검토용.</description>
    <label>Migration Adjustment Log</label>
    <nameField>
        <displayFormat>MAL-{0000000}</displayFormat>
        <label>Adjustment Log No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>