tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/ActualPoints__c.field-meta.xml
<CustomField>
    <fullName>ActualPoints__c</fullName>
    <description>실제 처리된 포인트 (잔액 부족 시 RequestedPoints 보다 작을 수 있음)</description>
    <label>Actual Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>