tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/AdjustType__c.field-meta.xml
<CustomField>
    <fullName>AdjustType__c</fullName>
    <description>처리 종류. 예: ACCRUAL_REVERSAL (적립 취소), USE_REVERSAL (사용 환원), SALE_MODIFY (판매 수정), REVERSAL_RESTORE (반품 삭제)</description>
    <label>Adjust Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>