tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/CustomerLoss__c.field-meta.xml
<CustomField>
    <fullName>CustomerLoss__c</fullName>
    <description>회사 부담 손실 (= Requested - Actual). 정기 정산 / 회원 보상 검토용</description>
    <label>Customer Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>