tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <description>분기 처리 영향 받은 회원 (LoyaltyProgramMember.Id)</description>
    <label>Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>