tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/MemberNo__c.field-meta.xml
<CustomField>
    <fullName>MemberNo__c</fullName>
    <description>회원 번호 (Contact.MemberNo__c, 운영자 조회용)</description>
    <externalId>true</externalId>
    <label>Member No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>