tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/OriginalSaleNo__c.field-meta.xml
<CustomField>
    <fullName>OriginalSaleNo__c</fullName>
    <description>원거래 식별자 (SaleNo__c, DepositNo__c 등). 어떤 거래에 대한 분기 처리인지 추적용</description>
    <label>Original Sale/Deposit No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>