tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>처리 사유 / 마커 / API 호출 정보 등 audit trail 메모</description>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>