tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/RequestedPoints__c.field-meta.xml
<CustomField>
    <fullName>RequestedPoints__c</fullName>
    <description>요청 처리 포인트 금액 (원래 차감/환원해야 할 금액)</description>
    <label>Requested Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>