tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/ReturnOrderId__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrderId__c</fullName>
    <description>반품 Order Id (RETURN_REGISTER_BRANCH 와 RETURN_DELETE_BRANCH 의 1:1 매칭 키. 기존 데이터는 null 허용 — fallback 매칭으로 호환)</description>
    <label>Return Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>