tmp-dev-full/objects/MigrationAdjustmentLog__c/fields/SourceApi__c.field-meta.xml
<CustomField>
    <fullName>SourceApi__c</fullName>
    <description>분기 처리 발생 API. 예: DELETE /gd/v1/return/deposit, POST /gd/v1/return, DELETE /gd/v1/sale, PATCH /gd/v1/sale</description>
    <label>Source API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>